@@ -1,0 +1,8 @@
+class KytoonException < StandardError
+end
+
+class ConfigException < KytoonException
+end
+
+class NoServerGroupExists < KytoonException
+end
